# maida

./: .gitignore  CHANGELOG.md  CNAME  DEVELOPMENT.md  LICENSE  OSSRequestForm-v4.xlsx  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  audit-results.json  dev.bat  electron-builder.yml  eslint.config.js  index.html  package.json  playwright.config.js  pnpm-lock.yaml  robots.txt  sitemap.xml  vite.config.js  vitest.config.js  ~$OSSRequestForm-v4.xlsx
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test.yml
docs/: a11y-audit-v0.2.0-translation-critique.md  a11y-audit-v0.2.0.md  user-manual-en.md  user-manual-ja.md  user-manual-zh-CN.md  user-manual-zh-TW.md
docs/autoresearch-raw/: consolidate.mjs  phase1-A.json  phase1-B.json  phase1-C.json  phase1-D.json  phase2-E.json  phase2-F.json  phase2-G.json
e2e/: a11y.spec.js
electron/: main.cjs  preload.cjs
electron/auth/: credentials.cjs  twitch-token.cjs
electron/scanners/: steam.cjs
electron/services/: hltb.cjs  igdb.cjs
manual/: index.html
src/: App.css  App.jsx  README.md  data.js  index.css  tourSteps.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  decay.rs  lib.rs  main.rs  persistence.rs  preferences.rs  telemetry.rs  touch_keyboard.rs
src-tauri/src/commands/: data.rs  igdb.rs  license.rs  mod.rs  session_log.rs  showcase.rs  steam.rs  window.rs
src-tauri/src/enrichment/: igdb.rs  mod.rs  twitch.rs
src-tauri/src/steam/: mod.rs  vdf.rs
(+114 files in other folders)
