[package]
name = "maida"
version = "0.4.3"
description = "Maida - Daily Focus Psychopomp"
authors = ["Bertram (Bright Raven) <bertram@brightraven.world>"]
edition = "2021"

[lib]
name = "maida_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "~2"
tauri-plugin-opener = "~2"
tauri-plugin-single-instance = "~2"
tauri-plugin-store = "~2"
tauri-plugin-updater = "~2"
tauri-plugin-process = "~2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
keyring = "3"
regex = "1"
chrono = "0.4"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = ["Win32_System_Com"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
